# recipes

./: .coveragerc  .env-example  .gitignore  pyproject.toml  pytest.ini  update-main.sh
authors/: forms.py  urls.py  views.py
authors/templates/authors/pages/: login_view.html  register_view.html
authors/tests/: test_author_register_form.py
base_static/global/css/: styles.css
base_templates/global/: base.html
base_templates/global/partials/: form.html  head.html  paginator.html
project/: asgi.py  settings.py  urls.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_category_and_more.py  0003_alter_recipe_slug.py
recipes/models/: recipe.py
recipes/static/recipes/css/: styles.css
recipes/templates/recipes/pages/: 404.html  category.html  home.html  recipe-view.html  search.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  paginator.html  recipe.html  search.html
recipes/tests/: test_recipe_base.py  test_recipe_category_views.py  test_recipe_detail_views.py  test_recipe_home_view.py  test_recipe_lodels.py  test_recipe_models.py  test_recipe_search_view.py  test_recipe_urls.py  test_recipe_views.py
static/recipes/css/: styles.css
utils/: pagination.py  test_pagination.py
utils/recipes/: factory.py
